--- a/apps/backoffice/package.json
+++ b/apps/backoffice/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev:vanilla": "vite",
+    "dev": "npm run dev:vanilla -w @BoucheeEtDragons/backoffice",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
